--- a/src/main/resources/web/admin/cores.html
+++ b/src/main/resources/web/admin/cores.html
@@ -23,10 +23,10 @@
 </script>
 <!--###BEGIN_HEAD###-->
     <script type="text/javascript" src="../../webjars/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="../../webjars/codemirror/3.16/codemirror.js"></script>
+    <script type="text/javascript" src="../../webjars/codemirror/3.16/lib/codemirror.js"></script>
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="../../webjars/codemirror/3.16/codemirror.css" />
+    <link rel="stylesheet" href="../../webjars/codemirror/3.16/lib/codemirror.css" />
     <script type="text/javascript" src="cores.js"></script>
 <!--###END_HEAD###-->
 </head>
